<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="virtualMachineListViewModel"
            type="com.example.test.screens.virtual_machines.VirtualMachineListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="66dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="66dp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/Piechart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="66dp" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Piechart"></com.google.android.material.chip.ChipGroup>

                <android.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:iconifiedByDefault="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chip_group" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/virtual_machine_list"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="66dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/search_view" />

            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>